test/corpus/statements.txt
================================================================================
Assignment Statement
================================================================================

fun main() {
  foo = 1
}

--------------------------------------------------------------------------------

(source_file
  (function_declaration
    (identifier)
    (parameter_list)
    (block
      (assignment_statement
        (expression_list
          (identifier))
        (expression_list
          (int_literal))))))

================================================================================
Multiple Assignments Statement
================================================================================

fun main() {
  foo, bar = 1, 2
}

--------------------------------------------------------------------------------

(source_file
  (function_declaration
    (identifier)
    (parameter_list)
    (block
      (assignment_statement
        (expression_list
          (identifier)
          (identifier))
        (expression_list
          (int_literal)
          (int_literal))))))

================================================================================
Assignment Statements with Operators
================================================================================

fun main() {
  a += 1
  a -= 1
  a *= 1
  a /= 1
  a %= 1
  a ^= 1
  a |= 1
  a &= 1
  a <<= 1
  a >>= 1
}

--------------------------------------------------------------------------------

(source_file
  (function_declaration
    (identifier)
    (parameter_list)
    (block
      (assignment_statement
        (expression_list
          (identifier))
        (expression_list
          (int_literal)))
      (assignment_statement
        (expression_list
          (identifier))
        (expression_list
          (int_literal)))
      (assignment_statement
        (expression_list
          (identifier))
        (expression_list
          (int_literal)))
      (assignment_statement
        (expression_list
          (identifier))
        (expression_list
          (int_literal)))
      (assignment_statement
        (expression_list
          (identifier))
        (expression_list
          (int_literal)))
      (assignment_statement
        (expression_list
          (identifier))
        (expression_list
          (int_literal)))
      (assignment_statement
        (expression_list
          (identifier))
        (expression_list
          (int_literal)))
      (assignment_statement
        (expression_list
          (identifier))
        (expression_list
          (int_literal)))
      (assignment_statement
        (expression_list
          (identifier))
        (expression_list
          (int_literal)))
      (assignment_statement
        (expression_list
          (identifier))
        (expression_list
          (int_literal))))))

================================================================================
Expression Statement
================================================================================

fun main() {
  a
  1
}

--------------------------------------------------------------------------------

(source_file
  (function_declaration
    (identifier)
    (parameter_list)
    (block
      (expression_statement
        (identifier))
      (expression_statement
        (int_literal)))))

================================================================================
Increment & Decrement Statement
================================================================================

fun main() {
  c++
  c--
}

--------------------------------------------------------------------------------

(source_file
  (function_declaration
    (identifier)
    (parameter_list)
    (block
      (increment_statement
        (identifier))
      (decrement_statement
        (identifier)))))
